--- a/app/src/main/res/layout/fragment_exercises_view.xml
+++ b/app/src/main/res/layout/fragment_exercises_view.xml
@@ -9,7 +9,7 @@
         android:animateLayoutChanges="true">
 
     <ImageView
-            android:id="@+id/image"
+            android:id="@+id/exercise_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintDimensionRatio="H,16:9"
@@ -19,12 +19,12 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-            android:id="@+id/name"
+            android:id="@+id/exercise_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/image"
+            app:layout_constraintBottom_toBottomOf="@+id/exercise_image"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="8dp"
@@ -33,11 +33,11 @@
             tools:text="@tools:sample/first_names"/>
 
     <TextView
-            android:id="@+id/description"
+            android:id="@+id/exercise_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/image"
+            app:layout_constraintTop_toBottomOf="@+id/exercise_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
@@ -47,7 +47,7 @@
             android:id="@+id/muscles"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/description"
+            app:layout_constraintTop_toBottomOf="@+id/exercise_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingStart="16dp"
